# dtcg-web

./: .coveragerc  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements.yml
src/dtcgweb/: app.py  main.py
src/dtcgweb/static/assets/css/: 404style.css
src/dtcgweb/static/data/l2_precompute/: glacier_index.json  glacier_outlines.shp
src/dtcgweb/static/data/l2_precompute/RGI60-06.00191/: gdir.json  outlines.shp
src/dtcgweb/static/data/l2_precompute/RGI60-06.00203/: outlines.shp  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00225/: outlines.shp  runoff.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00234/: gdir.json  outlines.shp  runoff.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00235/: gdir.json  outlines.shp  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00236/: gdir.json  outlines.shp  runoff.nc
src/dtcgweb/static/data/l2_precompute/RGI60-06.00237/: gdir.json  outlines.shp
src/dtcgweb/static/data/l2_precompute/RGI60-06.00291/: outlines.shp  runoff.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00309/: outlines.shp  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00310/: outlines.shp  runoff.nc
src/dtcgweb/static/data/l2_precompute/RGI60-06.00336/: gdir.json  outlines.shp
src/dtcgweb/static/data/l2_precompute/RGI60-06.00339/: outlines.shp  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00372/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00373/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00374/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00377/: eolis.nc  gdir.json  outlines.shp  runoff.nc  runoff_Daily_Cryosat_2011_2020.nc  runoff_Daily_Hugonnet_2000_2020.nc  runoff_SfcDaily_Cryosat_2011_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00378/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00379/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00380/: eolis.nc  gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00381/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00382/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00383/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00384/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/data/l2_precompute/RGI60-06.00385/: gdir.json  outlines.shp  runoff.nc  runoff_Daily_Hugonnet_2000_2020.nc  smb.npz
src/dtcgweb/static/l2_precompute/: glacier_index.json
src/dtcgweb/static/l2_precompute/RGI60-06.00191/: runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00203/: gdir.json  runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00225/: gdir.json
src/dtcgweb/static/l2_precompute/RGI60-06.00235/: runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00236/: smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00237/: runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00291/: gdir.json
src/dtcgweb/static/l2_precompute/RGI60-06.00309/: gdir.json  runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00310/: gdir.json  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00336/: runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00339/: gdir.json  runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00377/: gdir.json
src/dtcgweb/static/l2_precompute/RGI60-06.00416/: gdir.json  runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00424/: runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00443/: gdir.json  runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00473/: gdir.json
src/dtcgweb/static/l2_precompute/RGI60-06.00475/: runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00477/: gdir.json  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00539/: runoff.nc
src/dtcgweb/static/l2_precompute/RGI60-06.00540/: gdir.json  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-06.00544/: gdir.json  runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-11.00619/: gdir.json  runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-11.00719/: gdir.json
src/dtcgweb/static/l2_precompute/RGI60-11.00787/: gdir.json  runoff.nc  smb.npz
src/dtcgweb/static/l2_precompute/RGI60-11.00897/: gdir.json  smb.npz
src/dtcgweb/templates/: 404.html
src/dtcgweb/ui/components/: cryotempo_selection.py  region_selection.py
src/dtcgweb/ui/interface/apps/: pn_cryosat.py  pn_eolis.py  pn_runoff.py
(+1344 files in other folders)
