[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtcgweb"
version = "0.4.1"
authors = [
    { name = "DTCG Contributors", email = "" },
]
description = "DTCG dashboards for web."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "API",   
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "fastapi[standard]",
    "panel[fastapi]",
    "dtcg @ git+https://github.com/DTC-Glaciers/dtcg@release/1.0.0",
    "oggm @ git+https://github.com/gampnico/oggm@feat-dtcg",
    "param",
    "bokeh",
    "bokeh-fastapi",
    "holoviews",
    "geopandas",
]

[project.optional-dependencies]
oggm = [
    "oggm @ git+https://github.com/gampnico/oggm@feat-dtcg",
    "pandas",
    "numpy",
    "scipy",
    "shapely",
    "matplotlib",
    "Pillow",
    "netcdf4",
    "scikit-image",
    "scikit-learn",
    "configobj",
    "xarray",
    "dask",
    "bottleneck",
    "pyproj",
    "cartopy",
    "geopandas",
    "rasterio",
    "rioxarray",
    "seaborn",
    "tables",  # pytables
    "salem",
    "motionless",
    "ipython",
    "seaborn",
    "joblib",
    "progressbar2",
    "pytest-mpl @ git+https://github.com/OGGM/pytest-mpl",
]
tests = [
    "pytest",
    "coverage",
    "matplotlib",
    "numpy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme >= 1.1",
]
dev = [
    "dtcgweb[oggm,tests,docs]",
    "hatchling >= 1.12",
    "build >= 0.7",
    "pylint >= 2.16.1",
    "flake8 >= 6.0",
    "black >= 23.1",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/DTC-Glaciers/dtcg-web"
"Bug Tracker" = "https://github.com/DTC-Glaciers/dtcg-web/issues"
"Documentation" = "https://dtc-glaciers.github.io"

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]

# [project.scripts]
# run-dtcg = "main:main"
# dtcg-run = "main:main"

[tool.hatch.build.targets.sdist]
packages = ["src/dtcgweb"]
exclude = [
    "logs",
    "*.png",
    "*.vtu",
    "*.csv",
    "*.nc",
    "*.bat",
    "*.sh",
    "*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dtcgweb"]

[tool.hatch.metadata]
allow-direct-references = true
